common-applications/freesky-icsl-hk-cluster/cloudsca/api-gateway/deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sca-api-gateway
  namespace: sca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sca-api-gateway
  template:
    metadata:
      labels:
        app: sca-api-gateway
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: sca-api-gateway
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/icsl/sca-api-gateway:801778e1457c511da1add445cb045a0c5d909fd8
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8020
        resources:
          requests:
            cpu: 200m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2G
        volumeMounts:
        - mountPath: /work.ks
          name: secret-volume
          subPath: work_ks
        - mountPath: /primary.ks
          name: secret-volume
          subPath: primary_ks
        - mountPath: /standby.ks
          name: secret-volume
          subPath: standby_ks
        - mountPath: /opt/app/certs.keystore
          name: secret-volume
          subPath: certs_keystore
      volumes:
      - name: secret-volume
        secret:
          secretName: sca-secret
