common-applications/freesky-icsl-hk-cluster/cloudsca/api-gateway/service.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: sca-api-gateway
  namespace: sca
  labels:
    app: sca-api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8020
      name: api-gateway-app
      protocol: TCP
      targetPort: 8020
  selector:
    app: sca-api-gateway
